--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -32,7 +32,7 @@
 				<img src="assets/icons/sidemenu/new-icons/faq.svg" class="defaultIcon">	
 				<img src="assets/icons/sidemenu/new-icons/faq-active.svg" class="activeIcon">		
 			</span>
-			<span class="linkTitle">Faqs</span>		
+			<span class="linkTitle">FAQs</span>		
 		</div>
 		<div mat-button class="mat-button" [routerLink]="['/botActions']" skipLocationChange routerLinkActive="active" (click)="preview('Bot Actions')" mat-button>			
 			<span class="inlineIconBox">	
