--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -341,7 +341,7 @@
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{(simulteObj.sourceType?simulteObj.sourceType:'choose_an_option') | translate}}</button>                                            
                     <ul class="dropdown-menu content-menu">                                                                    
                       <li (click)="changeSimulate('page','source')"><a>Page</a></li>
-                      <li (click)="changeSimulate('faq','source')"><a>Faqs</a></li>
+                      <li (click)="changeSimulate('faq','source')"><a>FAQs</a></li>
                       <li (click)="changeSimulate('content','source')"><a>Content</a></li>
                     </ul>
                 </div>
