--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -104,6 +104,10 @@
         .nav-item{
           img{
             cursor: pointer;
+            &.search-icon{
+              right: 11px;
+              left: auto;
+            }
           }
         }
       }
