--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -279,6 +279,7 @@
                         margin-bottom: 1px;
                         font-weight: 500;
                         font-size: 14px;
+                        padding-top: 3px;
                         span{
                             max-width: 150px;
                             text-overflow: ellipsis;
