--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -155,12 +155,16 @@
             }
         }
         .trailts{
+            height: calc(100vh - 240px);
+            .ps-content{
+                padding-bottom: 120px;
+              }
             .content-body{
                 .utteranceTag{
                   padding: 5px;
-                  border: solid 1px rgba(138, 149, 159, 0.4);
+                //   border: solid 1px rgba(138, 149, 159, 0.4);
                   border-radius: 2px;
-                  background-color: #e5e8ec;
+                //   background-color: #e5e8ec;
                   margin-right: 5px;
                   margin-bottom: 5px;
                   float: left;
@@ -244,6 +248,10 @@
                         .icon {
                             margin-right: 10px;
                             position: relative;
+                            .expanded{
+                                -ms-transform: rotate(90deg); /* IE 9 */
+                                 transform: rotate(90deg); /* Standard syntax */
+                            }
                         }
                         .title {
                             display: inline-block;
@@ -260,6 +268,7 @@
                             float: right;
                             position: absolute;
                             right: 10px;
+                            top: 1px;
                         }
                     }
                     .add-utterances {
@@ -314,4 +323,22 @@
             }
         }
     }
+}
+
+perfect-scrollbar .ps--active-y{
+    .ps__thumb-y{
+        width: 3px !important;
+    }
+    .ps__rail-y{
+        width: 3px !important;
+    }
+    .ps__thumb-x{
+        display: none !important;
+    }
+    .ps__rail-x{
+        display: none !important;
+    }
+}
+::ng-deep .trailts .ps-content{
+    padding-bottom: 120px;
 }
