--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -1,6 +1,27 @@
 @import "./../../../app/scss/variables/variables.scss";
 
 .traits-container {
+    .mainLoadingSpinner{
+        position: absolute;
+        top: 40%;
+        // left: 30%;
+        // box-shadow: 0 5px 10px 0 #e9eff5;
+        background:  transparent;
+        width: 223px;
+        height: 40px;
+        padding-top: 10px;
+        border-radius: 4px;
+        opacity: 0.95;
+        padding-left: 5px;
+        width: 100%;
+        .please-wait-message {
+            position: relative;
+            color: #29293b;
+            top: -16px;
+            left: 25px;
+            font-size: 12px;
+        }  
+    }
     padding-right: 15px;
     .perfect-scroll {
         height: calc(100vh - 50px);
@@ -269,6 +290,7 @@
                             position: absolute;
                             right: 10px;
                             top: 1px;
+                            cursor: pointer;
                         }
                     }
                     .add-utterances {
@@ -300,11 +322,11 @@
                                 clear: both;
                             }
                             .delete-icon {
-                                // display: none;
                                 position: absolute;
                                 right: 10px;
+                                cursor: pointer;
                                 &:hover {
-                                    display: block;
+                                    display: inline-block;
                                 }
                             }
                         }
