--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -1,129 +1,135 @@
 <div class="traits-container row">
-      <!-- NO DATA FOUND -->
-      <div *ngIf="!(traits.traitGroups &&  traits.traitGroups.length)" class="noTraits">
-        <img src="assets/images/empty-illustration.png">
-        <div class='noTraitsInfo'><span class='infoHeader'> {{'No traits created yet!'}}</span>
-            <p class='infoP'> {{'Looks like there are no traits created yet Create and manage bot traits'}}<br>
-                {{'Create and manage bot traits'}}
-            </p>
-            <button class='kr-sg-button-primary' (click)='createNewTraits()'>{{'Create New'}}</button>
-        </div>
-        <div class="emptyNote">
-            <p class="emptyTitle"> {{'What are Traits?'}}</p>
-            <p class="emptyDesc">
-                {{'Traits are entities or attributes that can be extracted from user input, before intent recognition. You can train the bot to identify traits specific to your business domain and use them for intent and entity detection.'}}
-            </p>
-            <p class="emptyTitle">{{'How to create Traits?'}}</p>
-            <p class="emptyDesc marginBottom10">
-                {{'Identify all possible traits that your users are like to express in their conversations, group traits that are mutually exclusive and provide adequate training.'}}
-            </p>
-            <ul class="emptyListDesc">
-                <li>{{'Traits can be identified based on keywords/phrases and their synonyms. Examples:'}}
-                    <ul class="emptyListDesc">
-                        <li> {{"Trait-Color: Blue – 'Blue', 'Sapphire', 'Teal' , Trait-Color-Red – Red, Maroon, Crimson."}}
-                        </li>
-                        <li> {{"Trait-Status: NotWorking: 'doesn’t work', 'switched off', Trait-Status:Working: 'working', 'turned on'"}}
-                        </li>
-                    </ul>
-                </li>
-                <li> {{"Traits can also be inferred from a keyword or specific phrase in the sentence. There may not be any obvious association between certain words in the sentence and the value of the trait, but rather the sentence as a whole is needed to determine the value. Example:"}}
-                    <ul class="emptyListDesc">
-                        <li> {{"Trait-Greeting-Emotion: Positive – 'Good Morning', 'How are you'"}}</li>
-                    </ul>
-                </li>
+    <div class="mainLoadingSpinner" *ngIf="loadingTraits" >
+        <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
+        <span class="please-wait-message">Please Wait!</span>
+      </div>
+<ng-container *ngIf="!loadingTraits">\
+  <!-- NO DATA FOUND -->
+  <div *ngIf="!(traits.traitGroups &&  traits.traitGroups.length)" class="noTraits">
+    <img src="assets/images/empty-illustration.png">
+    <div class='noTraitsInfo'><span class='infoHeader'> {{'No traits created yet!'}}</span>
+        <p class='infoP'> {{'Looks like there are no traits created yet Create and manage bot traits'}}<br>
+            {{'Create and manage bot traits'}}
+        </p>
+        <button class='kr-sg-button-primary' (click)='createNewTraits()'>{{'Create New'}}</button>
+    </div>
+    <div class="emptyNote">
+        <p class="emptyTitle"> {{'What are Traits?'}}</p>
+        <p class="emptyDesc">
+            {{'Traits are entities or attributes that can be extracted from user input, before intent recognition. You can train the bot to identify traits specific to your business domain and use them for intent and entity detection.'}}
+        </p>
+        <p class="emptyTitle">{{'How to create Traits?'}}</p>
+        <p class="emptyDesc marginBottom10">
+            {{'Identify all possible traits that your users are like to express in their conversations, group traits that are mutually exclusive and provide adequate training.'}}
+        </p>
+        <ul class="emptyListDesc">
+            <li>{{'Traits can be identified based on keywords/phrases and their synonyms. Examples:'}}
+                <ul class="emptyListDesc">
+                    <li> {{"Trait-Color: Blue – 'Blue', 'Sapphire', 'Teal' , Trait-Color-Red – Red, Maroon, Crimson."}}
+                    </li>
+                    <li> {{"Trait-Status: NotWorking: 'doesn’t work', 'switched off', Trait-Status:Working: 'working', 'turned on'"}}
+                    </li>
+                </ul>
+            </li>
+            <li> {{"Traits can also be inferred from a keyword or specific phrase in the sentence. There may not be any obvious association between certain words in the sentence and the value of the trait, but rather the sentence as a whole is needed to determine the value. Example:"}}
+                <ul class="emptyListDesc">
+                    <li> {{"Trait-Greeting-Emotion: Positive – 'Good Morning', 'How are you'"}}</li>
+                </ul>
+            </li>
 
-            </ul>
-            <p class="emptyTitle"> {{'Where to use Traits'}}</p>
-            <p class="emptyDesc">
-                {{'Traits can be used to define intent detection rules, path qualification criteria in Knowledge Graph, entity detection or for any defining conversation flows.'}}
-            </p>
+        </ul>
+        <p class="emptyTitle"> {{'Where to use Traits'}}</p>
+        <p class="emptyDesc">
+            {{'Traits can be used to define intent detection rules, path qualification criteria in Knowledge Graph, entity detection or for any defining conversation flows.'}}
+        </p>
+    </div>
+</div>
+<!-- TABLE CONTENT -->
+<div class="traits" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
+    <div class="kr-sg-inline-notification p-3">
+        <div class="bulb-icon"><img src="assets/images/24x29-bulbicon.png"></div>
+        <div class="tost-text">Please click on 'Train' button to update your traits model with the latest
+            changes.
+            Your bot will identify the traits using latest changes only after the training is completed.</div>
+        <button class="kr-sg-button-primary" (click)="trainBot()">Train</button>
+    </div>
+    <div class="defineTraitsContainer d-none">
+        <div class="col-5 leftDiv">
+            <div class="defineTitle">
+                Define traits
+            </div>
+            <div class="defineDesc">
+                Define traits and train using phrases or utterances
+            </div>
+            <a class="defineLink" >
+                Add New Trait
+            </a>
+        </div>
+        <div class="col-2 backArrowDiv">
+            <img src="assets/images/arrow.svg" class="ml-1">
+        </div>
+        <div class="col-5 rightDiv">
+            <div class="defineTitle">
+                Train intents with traits
+            </div>
+            <div class="defineDesc">
+                Configure intent identification rules using traits
+            </div>
+            <a class="defineLink" >
+                Add New Rule
+            </a>
         </div>
     </div>
-    <!-- TABLE CONTENT -->
-    <div class="traits" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
-        <div class="kr-sg-inline-notification p-3">
-            <div class="bulb-icon"><img src="assets/images/24x29-bulbicon.png"></div>
-            <div class="tost-text">Please click on 'Train' button to update your traits model with the latest
-                changes.
-                Your bot will identify the traits using latest changes only after the training is completed.</div>
-            <button class="kr-sg-button-primary">Train</button>
-        </div>
-        <div class="defineTraitsContainer d-none">
-            <div class="col-5 leftDiv">
-                <div class="defineTitle">
-                    Define traits
-                </div>
-                <div class="defineDesc">
-                    Define traits and train using phrases or utterances
-                </div>
-                <a class="defineLink" >
-                    Add New Trait
-                </a>
+    <div class="table-list-content">
+        <div class="kr-sg-data-table" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
+            <div class="table-action-header">
+                <div class="action" (click)='createNewTraits()'><button>Create New Trait</button></div>
             </div>
-            <div class="col-2 backArrowDiv">
-                <img src="assets/images/arrow.svg" class="ml-1">
-            </div>
-            <div class="col-5 rightDiv">
-                <div class="defineTitle">
-                    Train intents with traits
-                </div>
-                <div class="defineDesc">
-                    Configure intent identification rules using traits
-                </div>
-                <a class="defineLink" >
-                    Add New Rule
-                </a>
-            </div>
-        </div>
-        <div class="table-list-content">
-            <div class="kr-sg-data-table" *ngIf="traits.traitGroups &&  traits.traitGroups.length">
-                <div class="table-action-header">
-                    <div class="action" (click)='createNewTraits()'><button>Create New Trait</button></div>
-                </div>
-                <section class="table-content mt-0">
-                    <header class="table-header">
-                        <div class="col" >TRAIT TYPE<img src="assets/icons/caretDown.svg"
-                                class="ml-1 hide"></div>
-                        <div class="col" >TRAITS <img src="assets/icons/caretDown.svg"
-                                class="ml-1 hide"></div>
-                        <div class="col">
-                            <div class="kr-sg-input-inline-search">                               
-                                <input type="text" placeholder="Search" class="input-search" [(ngModel)]="serachTraits">
-                                <img src="assets/icons/search.svg" class="search-icon">
+            <section class="table-content mt-0">
+                <header class="table-header">
+                    <div class="col" >TRAIT TYPE<img src="assets/icons/caretDown.svg"
+                            class="ml-1 hide"></div>
+                    <div class="col" >TRAITS <img src="assets/icons/caretDown.svg"
+                            class="ml-1 hide"></div>
+                    <div class="col">
+                        <div class="kr-sg-input-inline-search">                               
+                            <input type="text" placeholder="Search" class="input-search" [(ngModel)]="serachTraits">
+                            <img src="assets/icons/search.svg" class="search-icon">
+                        </div>
+                    </div>
+                </header>
+                <perfect-scrollbar class="trailts">
+                    <div class="content-body" *ngFor="let traitGroup of  traits.traitGroups | traitsFilter:serachTraits; let index = index">
+                        <div class="col_ col-2">{{traitGroup.groupName || '---'}}</div>
+                        <div class="col_ col-9" >
+                            <span *ngFor="let trait of traitGroup.traits" class="utteranceTag">
+                                <div class="kr-sg-tags small grey"><span class="tag-name">{{trait.traitName || '---'}}</span></div>
+                            </span>
+                        </div>
+                        <div class="col_ col-1 text-right">
+                            <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'"
+                                [placement]="'bottom-right'">
+                                <div class="dropdown dropdown-open">
+                                <img class="cursor-pointer" ngbDropdownToggle src="assets/icons/elipse.svg">
+                                <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
+                                     <li (click)="editTraitFroup(traitGroup)" ><span class="list-name">Edit</span></li>
+                                     <li (click)="deleteTraitsGroup(index,traitGroup,$event)"><span class="list-name">Delete</span></li>
+                                </ul>
+                                </div> 
                             </div>
                         </div>
-                    </header>
-                    <perfect-scrollbar class="trailts">
-                        <div class="content-body" *ngFor="let traitGroup of  traits.traitGroups | traitsFilter:serachTraits; let index = index">
-                            <div class="col_ col-2">{{traitGroup.groupName || '---'}}</div>
-                            <div class="col_ col-9" >
-                                <span *ngFor="let trait of traitGroup.traits" class="utteranceTag">
-                                    <div class="kr-sg-tags small grey"><span class="tag-name">{{trait.traitName || '---'}}</span></div>
-                                </span>
-                            </div>
-                            <div class="col_ col-1 text-right">
-                                <div class="kr-sg-dropdowns" ngbDropdown [container]="'body'"
-                                    [placement]="'bottom-right'">
-                                    <div class="dropdown dropdown-open">
-                                    <img class="cursor-pointer" ngbDropdownToggle src="assets/icons/elipse.svg">
-                                    <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
-                                         <li (click)="editTraitFroup(traitGroup)" ><span class="list-name">Edit</span></li>
-                                         <li (click)="deleteTraitsGroup(index,traitGroup,$event)"><span class="list-name">Delete</span></li>
-                                    </ul>
-                                    </div> 
-                                </div>
-                            </div>
-                        </div>
-                        <div class="divBlockEmptylastChild text-center">         
-                            <div class="desc">No search results found</div>
-                        </div>
-                    </perfect-scrollbar>
+                    </div>
+                    <div class="divBlockEmptylastChild text-center">         
+                        <div class="desc">No search results found</div>
+                    </div>
+                </perfect-scrollbar>
 
-                </section>
-            </div>
+            </section>
         </div>
     </div>
-    <!-- CREATE NEW TRAIT MODAL-->
+</div>
+<!-- CREATE NEW TRAIT MODAL-->
+</ng-container>
 </div>
 <kr-modal modalType="center" modalClass="addTraitModalComponent" #statusModalPop>
     <div class="modal-header">
@@ -163,7 +169,7 @@
                             <span class="edit-icon">
                                 <img src="assets/images/icons/edit-black.svg" class="ml-1">
                             </span>
-                            <span class="delete-icon" (click)="removeTraits(index)">
+                            <span class="delete-icon" (click)="deleteTraitInGroup(item.key,traits.addEditTraits,$event,index)">
                                 <img src="assets/images/trashIcon.svg" class="ml-1 ">
                             </span>
                         </div>
@@ -178,10 +184,10 @@
                             name='traitName'>
                         </div>
                         <div class="utterance-list" *ngIf="item.data && item.data.length">
-                            <ng-container *ngFor="let list of item.data; let uIndex = index;">
+                            <ng-container *ngFor="let utterance of item.data; let uIndex = index;">
                                 <div class="item">
-                                    {{list}}
-                                    <span class="delete-icon" (click)="removeUtterances(uIndex, index)">
+                                    {{utterance}}
+                                    <span class="delete-icon" (click)="$event.stopPropagation();deleteUtteranceIntrait(utterance,item.key,traits.addEditTraits,index)">
                                         <img src="assets/images/trashIcon.svg" class="ml-1 ">
                                     </span>
                                 </div>
